# MPAMSim

./: .gitignore  README.md  pyproject.toml
docs/: AI_Continuation_Plan.md  API.md  Architecture.md  Codex_Implementation_Tasks.md  Config_Schema.md  Current_Model_SPEC.md  Evidence_Sources.md  FlowControl_Model.md  KPI.md  MPAM_Capability_Map.md  MPAM_MSC_Behavior.md  MPAM_Model.md  Model_Assumptions.md  Multicore_Model.md  PRD.md  Scenario.md  Stimulus_Model.md  User_Interface_and_Visualization.md  V1_Scope.md
examples/: baseline_soc.yaml  basic_sweep.yaml
examples/experiments/: CBUSY_CPU_FEEDBACK_AB.md  NOISY_NEIGHBOR_PARTID0_AB.md  cbusy_cpu_feedback_off.json  cbusy_cpu_feedback_on.json  closed_loop.yaml  combined.yaml  no_control.yaml  noisy_neighbor_partid0_cbusy_off.json  noisy_neighbor_partid0_cbusy_on.json  static_mpam.yaml
outputs/qos_combiner_comparison/: comparison_summary.json  comparison_summary.md  qos_combiner_path1_average.json  qos_combiner_path1_max.json  qos_combiner_path1_replace.json  qos_combiner_path2_average.json  qos_combiner_path2_max.json  qos_combiner_path2_replace.json
src/: __init__.py
src/cache/: __init__.py  cache_msc.py
src/config/: __init__.py  loader.py  schema.py  validate.py  validator.py
tests/: conftest.py  test_bufferless_ring.py  test_cbusy_sideband.py  test_config_validation.py  test_core_ostd.py  test_determinism.py  test_explicit_l3.py  test_report.py  test_shared_mc.py  test_stimulus_dependency.py  test_typed_contracts.py  test_web_config.py  test_web_config_metadata.py
tools/: generate_qos_combiner_comparison.py
(+322 files in other folders)
